# mac-miller-lyrics-dataset

./: .gitignore  README.md  pyproject.toml
data/: lyrics.json  raw_lyrics.json
notebooks/: preprocess.ipynb  scrape.ipynb
