[tool.poetry]
name = "mac-miller-dataset"
version = "0.1.0"
description = ""
authors = ["Tim Baumgärtner <baumgaertner.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
tqdm = "^4.54.1"
Unidecode = "^1.1.2"
pandas = "^1.1.5"
sentence-transformers = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
